After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708403 - empathy-debugger crashes on start
empathy-debugger crashes on start
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: General
3.9.x
Other Linux
: High critical
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2013-09-19 19:29 UTC by Igor Gnatenko
Modified: 2013-09-23 08:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-EmpathyDebugger-Initialize-gint-argc-as-0.patch (916 bytes, patch)
2013-09-19 19:56 UTC, Igor Gnatenko
committed Details | Review

Comment 1 Igor Gnatenko 2013-09-19 19:56:37 UTC
Created attachment 255342 [details] [review]
0001-EmpathyDebugger-Initialize-gint-argc-as-0.patch

Fix.
Comment 2 André Klapper 2013-09-19 21:30:53 UTC
Empathy developers: If you want to get this in for 3.10.0, please email release-team@ for a hardcode freeze break request. I'd give a +1.
Comment 3 Guillaume Desmottes 2013-09-20 14:37:51 UTC
Review of attachment 255342 [details] [review]:

Looks good. I'll ask for an exception.
Comment 4 Guillaume Desmottes 2013-09-23 08:35:37 UTC
Approved.

Merged to master, thanks for the patch.