EmpathyDebugger: Initialize gint argc as 0

Since f451000063d5e20b337d2a8d7b0d7faf6429af6b empathy-debugger crashes
on start, because have cycle w/ argc++, but argc is uninitialized.

Reference: https://bugzilla.gnome.org/show_bug.cgi?id=708403

Signed-off-by: Igor Gnatenko <i.gnatenko.brain@gmail.com>